Aardvark.Base.Incremental: fixed (most except for one) errors in incremental; TimeList validation does not work atm; This commit demonstrates a funny concurrent getReader construction: if readers are constructed concurrently, it is possible that a still in construction reader should be reset to non-pass-through - funny to watch ಠ_ಠ (uncomment the initialized flag read in order to see initialized being false while running SetPassThrough)

--- a/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>b5958171-888e-46a0-bec9-00feba41147f</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>Aardvark.Base.Incremental.Tests</RootNamespace>
     <AssemblyName>Aardvark.Base.Incremental.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -70,6 +70,7 @@
     <Compile Include="AgTests.fs" />
     <Compile Include="Performance.fs" />
     <Content Include="app.config" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
