improvements for AdaptiveCode (fixed bug in SortedSetExt);

--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -63,6 +63,7 @@
     <Compile Include="PureAgTests.fs" />
     <Compile Include="NativeMemory.fs" />
     <Compile Include="Fragments.fs" />
+    <Compile Include="SortedSetExt.fs" />
     <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
