ASet: smallUnionReader; reactivated BindReader; added ASetPerformanceTests;

--- a/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
@@ -71,6 +71,7 @@
     <Compile Include="Performance.fs" />
     <Content Include="app.config" />
     <Compile Include="UndoRedo.fs" />
+    <Compile Include="ASetPerformanceTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
