added memory overhead of various adaptive objects

--- a/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
@@ -73,6 +73,7 @@
     <Compile Include="UndoRedo.fs" />
     <Compile Include="ASetPerformanceTests.fs" />
     <Compile Include="Program.fs" />
+    <Compile Include="SizeOfVariousAdaptiveObjects.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
