added FingerTree implementation to Base.FSharp;

--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -60,6 +60,7 @@
     <Compile Include="SkipList.fs" />
     <Compile Include="AVL.fs" />
     <Compile Include="StableSet.fs" />
+    <Compile Include="FingerTree.fs" />
     <Compile Include="Interop\Dictionary.fs" />
     <Compile Include="Interop\Symbol.fs" />
     <Compile Include="Interop\Vectors.fs" />
