[Base] extended PixImage with VolumeInfo (useful for NativeTensors); [Base.FSharp] added new NativeTensors with efficient copy implementation, etc.;

--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -70,6 +70,7 @@
     <Compile Include="Interop\HashSet.fs" />
     <Compile Include="Interop\CSharpList.fs" />
     <Compile Include="Interop\Tensors.fs" />
+    <Compile Include="Interop\NativeTensors.fs" />
     <Compile Include="Reflection\TypeInfo.fs" />
     <Compile Include="Reflection\FunctionReflection.fs" />
     <Compile Include="Reflection\UnmanagedFunctions.fs" />
