--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -90,6 +90,7 @@
     <Compile Include="Ag.fs" />
     <Compile Include="Control.fs" />
     <None Include="paket.references" />
+    <Compile Include="NewAg.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
