finally this simple setup just works

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ tmp
 /src/Aardvark.Base/Images/TensorExtensions_generator.cs
 /src/Demo/Sketch/.vs/Sketch/v14/*.suo
 /TestResult.xml
+/.fake
+/paket-files
