[Base.FSharp] added IL utilities - added Formatf (allowing to inspect F# style format strings) - added IL Assembler/Disassembler and sketched Quotation decompiler - some refactoring

--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -73,8 +73,11 @@
     <Compile Include="Interop\NativeTensors.fs" />
     <Compile Include="Reflection\TypeInfo.fs" />
     <Compile Include="Reflection\FunctionReflection.fs" />
+    <Compile Include="Reflection\Formatf.fs" />
     <Compile Include="Reflection\UnmanagedFunctions.fs" />
     <Compile Include="Reflection\Multimethod.fs" />
+    <Compile Include="Reflection\IL.fs" />
+    <Compile Include="Reflection\Quotations.fs" />
     <Compile Include="Runtime\DynamicLinker.fs" />
     <Compile Include="Runtime\ExecutableMemory.fs" />
     <Compile Include="Runtime\Assembler.fs" />
