removed RegexProvider, updated FSharp.CompilerServices, fixed f# 4.0 stuff

--- a/src/Demo/ExamplesCSharp/ExamplesCSharp.csproj
+++ b/src/Demo/ExamplesCSharp/ExamplesCSharp.csproj
@@ -51,7 +51,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
